--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "@reduxjs/toolkit": "^1.8.3",
     "axios": "^0.26.1",
     "dayjs": "^1.11.0",
+    "jodit-react": "^1.3.11",
     "jwt-decode": "^3.1.2",
     "jwt-encode": "^1.0.1",
     "miragejs": "^0.1.43",
     "mockman-js": "^1.1.5",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-quill": "^1.3.5",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
